fix wrapping of long download titles

--- a/css/downloadManager.css
+++ b/css/downloadManager.css
@@ -51,6 +51,7 @@
     font-size: 0.9em;
     opacity: 0.9;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
